<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:stretchColumns="0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/etNom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:ems="10"
                    android:hint="@string/Nom"
                    android:inputType="text" />

                <Button
                    android:id="@+id/bClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:onClick="bClearOnClick"
                    android:text="@string/Borrar" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/etTlf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:ems="10"
                    android:hint="@string/Telf"
                    android:inputType="phone" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/bGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="bGuardarOnClick"
                    android:text="@string/Guardar" />

                <Button
                    android:id="@+id/bGet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/getTelefon" />

            </TableRow>

        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>